syntax = "proto3";

package com.surajgharat.practice.grpc.service;

// grpc services
service SumService {
  rpc Sum(SumInput) returns (SumOutput) {}
  rpc GetSumUniqueComponents(SumNumber) returns(stream SumNumber) {}
}

message SumInput {
  int32 n1 = 1;
  int32 n2 = 2;
}

message SumOutput { int32 result = 1; }

message SumNumber{ int32 value = 1; }